--- a/.chezmoiscripts/run_once_after_services.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_services.sh.tmpl
@@ -1,20 +1,21 @@
 #!/bin/sh
 set -e
 
-systemctl enable --user --now pueued.service
+systemctl --user start pueued.service
+systemctl --user enable pueued.service
 sudo systemctl enable --now NetworkManager.service             
 # sudo systemctl enable --now NetworkManager-dispatcher.service  
 # sudo systemctl enable --now NetworkManager-wait-online.service 
 {{ if eq .chezmoi.hostname "pc" }}
-systemctl enable --user --now ollama.service               
+systemctl --user enable --now ollama.service               
 sudo systemctl enable --now lm_sensors.service 
 # sudo systemctl enable --now nvidia-hibernate.service           
 # sudo systemctl enable --now nvidia-resume.service              
 # sudo systemctl enable --now nvidia-suspend.service             
 {{ else if eq .chezmoi.hostname "laptop" }}
-# Optimizes power usage on laptops by applying advanced power management settings.      
-sudo systemctl enable --now tlp.service 
 sudo systemctl enable --now bluetooth
+# Optimizes power usage on laptops by applying advanced power management settings.      
+# sudo systemctl enable --now tlp.service 
 {{ end }}
 
 # systemctl enable --user --now pulseaudio.service   for x11
