--- a/.chezmoiscripts/run_once_before_install_wayland.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_install_wayland.sh.tmpl
@@ -1,8 +1,11 @@
 #!/bin/bash
 set -e
 
-sudo zypper install -y hyprland  hyprland-devel hyprland-qtutils hyprpolkitagent hyprsunset xwayland qt5-wayland qt6-wayland xdg-desktop-portal-hyprland xdg-desktop-portal-gtk
+sudo zypper install -y hyprland  hyprland-devel hyprland-qtutils hyprpolkitagent  xwayland qt6-wayland xdg-desktop-portal-hyprland xdg-desktop-portal-gtk
+sudo zypper install -y mako
 # hyprlock
+#hyprsunset
+# qt5-wayland 
 
 sudo zypper install -y --no-recommends grim slurp swayimg wl-clipboard cliphist
 
