--- a/dot_zprofile.tmpl
+++ b/dot_zprofile.tmpl
@@ -29,4 +29,18 @@ export COURSES="/media/multimedia/kursy"
 # export LC_CTYPE=en_US.UTF-8
 # export LC_ALL=C
 
+# TODO REMOVE
+# Load profiles from /etc/profile.d
+# if test -d /etc/profile.d/; then
+# 	for profile in /etc/profile.d/*.sh; do
+# 		test -r "$profile" && . "$profile"
+# 	done
+# 	unset profile
+# fi
+#
+# # Source global bash config
+# if test "$PS1" && test "$BASH" && test -r /etc/bash.bashrc; then
+# 	. /etc/bash.bashrc
+# fi
+
 # vi: ft=zsh
