--- a/.chezmoiscripts/run_once_after_install_externals.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_install_externals.sh.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 set -e
 
-BIN_DIR="{{ .chezmoi.sourceDir }}/dot_bin/"
+BIN_DIR="{{ .chezmoi.sourceDir }}/dot_bin"
 TMP="$HOME/tmp-chezmoi"
 mkdir -p "$BIN_DIR"
 
@@ -12,7 +12,7 @@ FASDER_FILE="fasder"
 echo "🔨 Building Go project in $FASDER_DIR..."
 cd "$FASDER_DIR"
 go build
-cp -v --update=none "$FASDER_FILE" "$BIN_DIR"
+cp -v --update=none "$FASDER_FILE" "$BIN_DIR/executable_fasder"
 echo "✅ Build complete and copied - fasder."
 
 # kanata
@@ -22,7 +22,7 @@ echo "🔨 Building Go project in $KANATA_DIR..."
 cd "$KANATA_DIR"
 cargo build --release --features cmd
 # cargo install --features cmd --path .
-cp -v --update=none cp "$KANATA_FILE" "$BIN_DIR"
+cp -v --update=none "$KANATA_FILE" "$BIN_DIR/executable_kanata"
 echo "✅ Build complete and copied - kanata."
 
 # https://github.com/jtroo/kanata/wiki/Avoid-using-sudo-on-Linux
