--- a/dot_zprofile.tmpl
+++ b/dot_zprofile.tmpl
@@ -11,6 +11,40 @@ export PRIVATE="$HOME/Documents/Ustawienia/private"
 export GUI_EDITOR=/usr/bin/nvim-qt
 export BACKUP_LOG="$HOME/Documents/Ustawienia/logs/borg-pc"
 
+# Set our default path
+export SELENIUM="$HOME/Ext/selenium/chromedriver"
+# PATH="/usr/local/sbin:/usr/local/bin:/usr/bin/core_perl:/usr/bin:$HOME/.config/bspwm/panel:$HOME/.bin:$HOME/.local/share/gem/ruby/2.7.0/bin:$SELENIUM"
+export GRAALVM_HOME="$HOME/.local/share/sdkman/candidates/java/23.1.1.r21-nik"
+export GOPATH="$XDG_DATA_HOME"/go
+export CARGO_HOME="$XDG_DATA_HOME"/cargo
+export SCRIPTS="$HOME/.bin"
+PATH="/usr/local/sbin:/usr/local/bin:/usr/bin/core_perl:/usr/bin:$SCRIPTS:$HOME/.local/share/gem/ruby/2.7.0/bin:$GRAALVM_HOME/bin:$SELENIUM:$(go env GOPATH)/bin:$CARGO_HOME/bin"
+export PATH
+
+export NIK=~/.local/share/sdkman/candidates/java/23.r20-nik/bin/native-image
+export NIK_HOME=~/.local/share/sdkman/candidates/java/23.r20-nik
+
+# paths
+export LUA_INIT="@$HOME/.bin/lua/init.lua"
+export BABASHKA_PRELOADS='(load-file (str (System/getenv "HOME") "/.bin/clj/init.clj"))'
+## changing default config folder
+export XDG_DATA_HOME="$HOME/.local/share"
+export XDG_STATE_HOME="$HOME/.local/state"
+export XDG_CACHE_HOME="$HOME/.cache"
+export XDG_CONFIG_HOME="$HOME/.config"
+export XDG_CONFIG_DIRS=/usr/etc/xdg:/etc/xdg
+export XDG_DOWNLOAD_DIR="$HOME/Downloads"
+export GTK2_RC_FILES="$HOME/.config/gtkrc-2.0"
+# export GTK3_RC_FILES=/home/miro/.config/gtkrc-3.0
+export UNCRUSTIFY_CONFIG="$XDG_CONFIG_HOME"/uncrustify/uncrustify.cfg
+export SCREENRC="$XDG_CONFIG_HOME"/screen/screenrc
+export SDKMAN_DIR="$XDG_DATA_HOME"/sdkman
+export GNUPGHOME="$XDG_DATA_HOME"/gnupg
+export LESSHISTFILE="$XDG_CACHE_HOME"/less/history
+export HISTFILE="${XDG_STATE_HOME}"/bash/history
+export ROFI="$HOME/.config/rofi/scripts"
+
+
 {{ if eq .chezmoi.hostname "laptop" }}
 export OLLAMA_API_HOST="http://$(cat "$PRIVATE/ip4pc"):11434"
 
