--- a/dot_zprofile.tmpl
+++ b/dot_zprofile.tmpl
@@ -11,22 +11,6 @@ export PRIVATE="$HOME/Documents/Ustawienia/private"
 export GUI_EDITOR=/usr/bin/nvim-qt
 export BACKUP_LOG="$HOME/Documents/Ustawienia/logs/borg-pc"
 
-# Set our default path
-export SELENIUM="$HOME/Ext/selenium/chromedriver"
-# PATH="/usr/local/sbin:/usr/local/bin:/usr/bin/core_perl:/usr/bin:$HOME/.config/bspwm/panel:$HOME/.bin:$HOME/.local/share/gem/ruby/2.7.0/bin:$SELENIUM"
-export GRAALVM_HOME="$HOME/.local/share/sdkman/candidates/java/23.1.1.r21-nik"
-export GOPATH="$XDG_DATA_HOME"/go
-export CARGO_HOME="$XDG_DATA_HOME"/cargo
-export SCRIPTS="$HOME/.bin"
-PATH="/usr/local/sbin:/usr/local/bin:/usr/bin/core_perl:/usr/bin:$SCRIPTS:$HOME/.local/share/gem/ruby/2.7.0/bin:$GRAALVM_HOME/bin:$SELENIUM:$(go env GOPATH)/bin:$CARGO_HOME/bin"
-export PATH
-
-export NIK=~/.local/share/sdkman/candidates/java/23.r20-nik/bin/native-image
-export NIK_HOME=~/.local/share/sdkman/candidates/java/23.r20-nik
-
-# paths
-export LUA_INIT="@$HOME/.bin/lua/init.lua"
-export BABASHKA_PRELOADS='(load-file (str (System/getenv "HOME") "/.bin/clj/init.clj"))'
 ## changing default config folder
 export XDG_DATA_HOME="$HOME/.local/share"
 export XDG_STATE_HOME="$HOME/.local/state"
@@ -44,6 +28,21 @@ export LESSHISTFILE="$XDG_CACHE_HOME"/less/history
 export HISTFILE="${XDG_STATE_HOME}"/bash/history
 export ROFI="$HOME/.config/rofi/scripts"
 
+
+# PATHS
+export LUA_INIT="@$HOME/.bin/lua/init.lua"
+export BABASHKA_PRELOADS='(load-file (str (System/getenv "HOME") "/.bin/clj/init.clj"))'
+export SELENIUM="$HOME/Ext/selenium/chromedriver"
+# PATH="/usr/local/sbin:/usr/local/bin:/usr/bin/core_perl:/usr/bin:$HOME/.config/bspwm/panel:$HOME/.bin:$HOME/.local/share/gem/ruby/2.7.0/bin:$SELENIUM"
+export GRAALVM_HOME="$HOME/.local/share/sdkman/candidates/java/23.1.1.r21-nik"
+export GOPATH="$XDG_DATA_HOME"/go
+export CARGO_HOME="$XDG_DATA_HOME"/cargo
+export SCRIPTS="$HOME/.bin"
+PATH="/usr/local/sbin:/usr/local/bin:/usr/bin/core_perl:/usr/bin:$SCRIPTS:$HOME/.local/share/gem/ruby/2.7.0/bin:$GRAALVM_HOME/bin:$SELENIUM:$(go env GOPATH)/bin:$CARGO_HOME/bin"
+export PATH
+
+export NIK=~/.local/share/sdkman/candidates/java/23.r20-nik/bin/native-image
+export NIK_HOME=~/.local/share/sdkman/candidates/java/23.r20-nik
 
 {{ if eq .chezmoi.hostname "laptop" }}
 export OLLAMA_API_HOST="http://$(cat "$PRIVATE/ip4pc"):11434"
