add waybar and swayimg

--- a/.chezmoiscripts/run_once_before_install_wayland.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_install_wayland.sh.tmpl
@@ -7,7 +7,7 @@ sudo zypper install -y mako
 #hyprsunset
 # qt5-wayland 
 
-sudo zypper install -y --no-recommends grim slurp swayimg wl-clipboard cliphist
+sudo zypper install -y --no-recommends grim slurp swayimg wl-clipboard cliphist waybar
 
 {{ if eq .chezmoi.hostname "pc" }}
 {{ else if eq .chezmoi.hostname "laptop" }}
