--- a/.chezmoiscripts/run_once_before_install_open_suse.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_install_open_suse.sh.tmpl
@@ -2,7 +2,7 @@
 set -e
 
 sudo zypper install -y go rust luajit
-sudo zypper install -y curl gawk git ImageMagick wget btop xdg-user-dirs xdg-utils mpv mpv-mpris vifm 7zip pueue qutebrowser vifm zsh fzf fd ripgrep timewarrior taskwarrior btop lazygit git-delta eza tealdeer bat
+sudo zypper install -y curl gawk git ImageMagick wget btop xdg-user-dirs xdg-utils mpv mpv-mpris vifm 7zip pueue qutebrowser vifm zsh fzf fd ripgrep timewarrior taskwarrior btop lazygit git-delta eza tealdeer bat libnotify-tools
 sudo zypper install -y meld
 # sudo zypper install -y dua rofi-buku   delta mpd?--no-recommends
 sudo zypper install -y --no-recommends NetworkManager-applet playerctl newsboat clojure
