fix servise; install with cargo

--- a/.chezmoiscripts/run_once_after_install_externals.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_install_externals.sh.tmpl
@@ -15,35 +15,15 @@ go build
 cp -v --update=none "$FASDER_FILE" "$BIN_DIR/executable_fasder"
 echo "✅ Build complete and copied - fasder."
 
-# kanata
-KANATA_DIR="$TMP/kanata/"
-KANATA_FILE="$TMP/kanata/target/release/kanata"
-echo "🔨 Building Go project in $KANATA_DIR..."
-cd "$KANATA_DIR"
-cargo build --release --features cmd
-# cargo install --features cmd --path .
-cp -v --update=none "$KANATA_FILE" "$BIN_DIR/executable_kanata"
-echo "✅ Build complete and copied - kanata."
-
-# https://github.com/jtroo/kanata/wiki/Avoid-using-sudo-on-Linux
-GROUP_NAME="uinput"
-if ! getent group "$GROUP_NAME" > /dev/null; then
-  echo "Group '$GROUP_NAME' does not exist. Creating it now..."
-  sudo groupadd "$GROUP_NAME"
-  echo "Group '$GROUP_NAME' created successfully."
-else
-  echo "Group '$GROUP_NAME' already exists. Skipping creation."
-fi
-
-sudo usermod -aG input "$USER"
-sudo usermod -aG uinput "$USER"
-echo "✅ Added uinput group - kanata."
-KANATA_RULES='/etc/udev/rules.d/99-input.rules'
-sudo touch $KANATA_RULES
-sudo echo 'KERNEL=="uinput", MODE="0660", GROUP="uinput", OPTIONS+="static_node=uinput"' | sudo tee $KANATA_RULES
-sudo modprobe uinput
-# sudo systemctl --user enable kanata.service
-# sudo systemctl --user start kanata.service
+# # kanata
+# KANATA_DIR="$TMP/kanata/"
+# KANATA_FILE="$TMP/kanata/target/release/kanata"
+# echo "🔨 Building Go project in $KANATA_DIR..."
+# cd "$KANATA_DIR"
+# cargo build --release --features cmd
+# # cargo install --features cmd --path .
+# cp -v --update=none "$KANATA_FILE" "$BIN_DIR/executable_kanata"
+# echo "✅ Build complete and copied - kanata."
 
 sudo bash < <(curl -s https://raw.githubusercontent.com/babashka/babashka/master/install)
 
