fix rofi-buku and editor in qb

--- a/.chezmoiscripts/run_once_before_install_open_suse.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_install_open_suse.sh.tmpl
@@ -10,7 +10,7 @@ sudo zypper install -y --no-recommends universal-ctags tesseract tesseract-ocr-t
 # sudo zypper install -y --no-recommends pdfunite broot jq fastfetch 
 # ueberzugpp doesn't work
 # opi
-# dua-cli
+# dua-cli brave
 
 #too old versions or no package in repos
 # sudo zypper install -y pueue 
