--- a/.chezmoiscripts/run_once_before_install_wayland.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_install_wayland.sh.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 set -e
 
-sudo zypper install -y hyprland  hyprland-devel hyprland-qtutils hyprpolkitagent  xwayland qt6-wayland xdg-desktop-portal-hyprland xdg-desktop-portal-gtk wtype
+sudo zypper install -y hyprland  hyprland-devel hyprland-qtutils hyprpolkitagent  xwayland qt6-wayland xdg-desktop-portal-hyprland xdg-desktop-portal-gtk ydotool
 sudo zypper install -y mako
 
 sudo zypper install -y --no-recommends grim slurp swayimg wl-clipboard cliphist waybar
