yad install and convert from zenity

--- a/.chezmoiscripts/run_once_before_install_open_suse.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_install_open_suse.sh.tmpl
@@ -2,7 +2,7 @@
 set -e
 
 sudo zypper install -y go rust luajit
-sudo zypper install -y curl gawk git ImageMagick wget btop xdg-user-dirs xdg-utils mpv mpv-mpris vifm 7zip qutebrowser vifm zsh fzf fd ripgrep timewarrior taskwarrior btop lazygit git-delta eza tealdeer bat libnotify-tools 
+sudo zypper install -y curl gawk git ImageMagick wget btop xdg-user-dirs xdg-utils mpv mpv-mpris vifm 7zip qutebrowser vifm zsh fzf fd ripgrep timewarrior taskwarrior btop lazygit git-delta eza tealdeer bat libnotify-tools yad
 sudo zypper install -y meld qalculate-gtk 
 sudo zypper install -y --no-recommends NetworkManager-applet playerctl newsboat clojure keepassxc
 sudo zypper install -y --no-recommends universal-ctags tesseract tesseract-ocr-traineddata-eng  atool pandoc
